lab6_part_project

--- a/Projet_ML_AVC.ipynb
+++ b/Projet_ML_AVC.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "0b1791f7",
    "metadata": {},
    "outputs": [],
@@ -1875,6 +1875,110 @@
     "We also tested custom probability thresholds to improve Recall while keeping FP ≈ 0.  \n",
     "However, no alternative threshold improved results compared to the default 0.5.  \n",
     "Therefore, the default classification threshold was retained for the final evaluation.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d0edf88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from time import perf_counter\n",
+    "import joblib, os\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix\n",
+    "\n",
+    "# Repartir de tes meilleurs pipelines déjà fit par GridSearch\n",
+    "best_rf = rf_gs.best_estimator_          # Pipeline(preprocessor, RandomForestClassifier(...))\n",
+    "best_xgb = xgb_gs.best_estimator_        # Pipeline(preprocessor, XGBClassifier(...))\n",
+    "\n",
+    "voting_soft = VotingClassifier(\n",
+    "    estimators=[\n",
+    "        (\"rf\", best_rf),\n",
+    "        (\"xgb\", best_xgb),\n",
+    "    ],\n",
+    "    voting=\"soft\",  # moyenne des probabilités\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "\n",
+    "# Fit Voting sur le train\n",
+    "voting_soft.fit(X_train, y_train)\n",
+    "\n",
+    "# Évaluation\n",
+    "def eval_model(name, model, X_test, y_test):\n",
+    "    proba = model.predict_proba(X_test)[:,1] if hasattr(model, \"predict_proba\") else None\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    metrics = {\n",
+    "        \"Model\": name,\n",
+    "        \"Accuracy\": accuracy_score(y_test, y_pred),\n",
+    "        \"Precision\": precision_score(y_test, y_pred),\n",
+    "        \"Recall\": recall_score(y_test, y_pred),\n",
+    "        \"F1\": f1_score(y_test, y_pred),\n",
+    "        \"ROC_AUC\": roc_auc_score(y_test, proba) if proba is not None else float(\"nan\"),\n",
+    "    }\n",
+    "    cm = confusion_matrix(y_test, y_pred)\n",
+    "    return metrics, cm\n",
+    "\n",
+    "metrics_rf, cm_rf = eval_model(\"RF (best)\", best_rf, X_test, y_test)\n",
+    "metrics_xgb, cm_xgb = eval_model(\"XGB (best)\", best_xgb, X_test, y_test)\n",
+    "metrics_vote, cm_vote = eval_model(\"Voting (soft)\", voting_soft, X_test, y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "936ede44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inference_time_ms_per_sample(model, X, n_repeats=20):\n",
+    "    # réchauffe\n",
+    "    _ = model.predict(X[:10])\n",
+    "    start = perf_counter()\n",
+    "    for _ in range(n_repeats):\n",
+    "        _ = model.predict(X)\n",
+    "    elapsed = perf_counter() - start\n",
+    "    return (elapsed / (n_repeats * len(X))) * 1000.0\n",
+    "\n",
+    "def model_size_mb(model, path):\n",
+    "    joblib.dump(model, path)\n",
+    "    size_mb = os.path.getsize(path) / (1024*1024)\n",
+    "    os.remove(path)\n",
+    "    return size_mb\n",
+    "\n",
+    "metrics_rf[\"InfTime(ms/sample)\"] = inference_time_ms_per_sample(best_rf, X_test)\n",
+    "metrics_xgb[\"InfTime(ms/sample)\"] = inference_time_ms_per_sample(best_xgb, X_test)\n",
+    "metrics_vote[\"InfTime(ms/sample)\"] = inference_time_ms_per_sample(voting_soft, X_test)\n",
+    "\n",
+    "metrics_rf[\"Size(MB)\"] = model_size_mb(best_rf, \"rf_best.joblib\")\n",
+    "metrics_xgb[\"Size(MB)\"] = model_size_mb(best_xgb, \"xgb_best.joblib\")\n",
+    "metrics_vote[\"Size(MB)\"] = model_size_mb(voting_soft, \"vote_soft.joblib\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "576f5069",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "comparison = pd.DataFrame([metrics_rf, metrics_xgb, metrics_vote])\n",
+    "comparison[\"Interpretability\"] = [\n",
+    "    \"Moyenne (forêt aléatoire)\", \n",
+    "    \"Faible (boosting ensembliste)\", \n",
+    "    \"Faible (mélange de modèles)\"\n",
+    "]\n",
+    "\n",
+    "# Option : ajouter ta baseline LogReg si tu veux illustrer le compromis perf/interprétation\n",
+    "# metrics_lr, _ = eval_model(\"LogReg (baseline)\", lr_pipe, X_test, y_test)\n",
+    "# metrics_lr[\"InfTime(ms/sample)\"] = inference_time_ms_per_sample(lr_pipe, X_test)\n",
+    "# metrics_lr[\"Size(MB)\"] = model_size_mb(lr_pipe, \"lr_baseline.joblib\")\n",
+    "# comparison = pd.concat([comparison, pd.DataFrame([metrics_lr])], ignore_index=True)\n",
+    "\n",
+    "display(comparison.sort_values(by=[\"ROC_AUC\",\"F1\",\"Recall\"], ascending=False).round(3))\n"
    ]
   },
   {
