--- a/step1.ipynb
+++ b/step1.ipynb
@@ -5,7 +5,7 @@
    "id": "b2a47d52",
    "metadata": {},
    "source": [
-    "**Machine learning project**"
+    "**Machine learning project STEP 1**"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "77388177",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
    ],
    "source": [
     "# Load dataset\n",
-    "df = pd.read_csv(\"heart.csv\")\n",
+    "df = pd.read_csv(\"heart_cleveland_upload.csv\")\n",
     "\n",
     "# Basic overview\n",
     "print(f\"Shape: {df.shape[0]} rows × {df.shape[1]} columns\\n\")\n",
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "da3596a6",
    "metadata": {},
    "outputs": [
@@ -561,17 +561,17 @@
     "print(f\"Total duplicated rows: {total_dupes}\")\n",
     "\n",
     "# Target distribution ('condition')\n",
-    "print(\"\\n--- Target Variable Distribution ---\")\n",
-    "target_counts = df['target'].value_counts().sort_index()\n",
+    "print(\"\\n--- Target Variable Distribution (condition) ---\")\n",
+    "target_counts = df['condition'].value_counts().sort_index()\n",
     "target_pct = (target_counts / target_counts.sum() * 100).round(2)\n",
     "target_table = pd.DataFrame({\"count\": target_counts, \"percent\": target_pct})\n",
     "display(target_table)\n",
     "\n",
     "# 3) Visualize target distribution\n",
     "plt.figure(figsize=(6, 4))\n",
-    "ax = sns.countplot(x=\"target\", data=df, palette=\"pastel\", legend=False)\n",
+    "ax = sns.countplot(x=\"condition\", data=df, palette=\"pastel\", legend=False)\n",
     "plt.title(\"Target Distribution (0 = No Heart Disease, 1 = Heart Disease)\")\n",
-    "plt.xlabel(\"Target\")\n",
+    "plt.xlabel(\"condition\")\n",
     "plt.ylabel(\"count\")\n",
     "\n",
     "# annotate bars with percentages\n",
@@ -585,23 +585,229 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a16bf46e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "01a0883f",
+   "id": "242d631b",
    "metadata": {},
    "source": [
     "**Analysis:**\n",
     "\n",
-    "The data is clean: 0 missing values and 723 duplicates.\n",
+    "The data is clean: 0 missing values and 0 duplicates.\n",
     "\n",
     "The target is well-balanced: ~54% \"No Disease\" (0) and ~46% \"Disease\" (1). This is excellent, as we won't need complex resampling techniques (like SMOTE) for our baseline model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf72dc43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define feature types\n",
+    "continuous_features = ['age', 'trestbps', 'chol', 'thalach', 'oldpeak']\n",
+    "categorical_features = ['sex', 'cp', 'fbs', 'restecg', 'exang', 'slope', 'ca', 'thal']\n",
+    "\n",
+    "# Plot 1: Histograms for continuous features\n",
+    "print(\"--- Visualizing Continuous Features ---\")\n",
+    "plt.figure(figsize=(14, 10))\n",
+    "\n",
+    "for i, col in enumerate(continuous_features, 1):\n",
+    "    plt.subplot(3, 2, i)\n",
+    "    sns.histplot(data=df, x=col, hue='condition', kde=True, element='step')\n",
+    "    plt.title(f'Distribution of {col}')\n",
+    "    plt.xlabel(col)\n",
+    "    plt.ylabel(\"Count\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"step1_continuous_features.png\", dpi=150)\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot 2: Count plots for categorical features\n",
+    "print(\"\\n--- Visualizing Categorical Features ---\")\n",
+    "plt.figure(figsize=(14, 10))\n",
+    "\n",
+    "for i, col in enumerate(categorical_features, 1):\n",
+    "    plt.subplot(3, 3, i)\n",
+    "    sns.countplot(data=df, x=col, hue='condition', palette='pastel')\n",
+    "    plt.title(f'Distribution of {col}')\n",
+    "    plt.xlabel(col)\n",
+    "    plt.ylabel(\"Count\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"step1_categorical_features.png\", dpi=150)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e456c4bc",
+   "metadata": {},
+   "source": [
+    "##### **Analysis**\n",
+    "\n",
+    "##### Categorical features\n",
+    "- **sex**: Most patients with heart disease (condition=1) are **male (sex=1)**.  \n",
+    "- **cp (chest pain type)**: Higher chest pain type (especially **type 3**) is strongly associated with disease presence.  \n",
+    "- **fbs (fasting blood sugar)**: No clear difference between the two conditions.  \n",
+    "- **restecg**: Slightly more abnormal ECG results (value 2) among diseased patients.  \n",
+    "- **exang (exercise-induced angina)**: Patients **without angina (exang=0)** are more often healthy.  \n",
+    "- **slope**: Diseased patients are mostly in **slope=1** category (flat ST segment).  \n",
+    "- **ca**: Higher number of major vessels (**ca=0 or 1**) shows stronger relation to disease.  \n",
+    "- **thal**: Diseased patients often have **thal=2 (fixed defect)**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### Continuous features\n",
+    "- **age**: Heart disease patients tend to be **older**, peaking around 55–65 years.  \n",
+    "- **trestbps (resting blood pressure)**: Slightly higher for diseased individuals but distributions overlap.  \n",
+    "- **chol (cholesterol)**: Diseased patients show **higher cholesterol levels** on average.  \n",
+    "- **thalach (maximum heart rate)**: Diseased patients have **lower max heart rate**, a key discriminant.  \n",
+    "- **oldpeak (ST depression)**: Diseased group shows **higher oldpeak values**, indicating more severe ECG abnormalities.\n",
+    "\n",
+    "**Summary:** Age, thalach, oldpeak, cp, and sex are the most discriminant variables — consistent with clinical expectations for cardiovascular risk.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2dc649f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n--- 1.5 Correlation Matrix ---\")\n",
+    "\n",
+    "# Compute correlation matrix\n",
+    "corr_matrix = df.corr(numeric_only=True)\n",
+    "\n",
+    "# Plot heatmap\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "sns.heatmap(\n",
+    "    corr_matrix,\n",
+    "    annot=True,        # Display correlation values\n",
+    "    fmt=\".2f\",         # Round to 2 decimal places\n",
+    "    cmap=\"coolwarm\",   # Color palette\n",
+    "    square=True,       # Keep cells squared\n",
+    "    linewidths=0.5     # Light gridlines for readability\n",
+    ")\n",
+    "plt.title(\"Correlation Matrix of Features\", fontsize=14, weight=\"bold\")\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"step1_04_correlation_heatmap.png\", dpi=150)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "955f9523",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define features (X) and target (y)\n",
+    "X = df.drop(columns=[\"condition\"])\n",
+    "y = df[\"condition\"]\n",
+    "\n",
+    "# Stratified split to preserve class proportions\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.20,          # 80/20 split\n",
+    "    random_state=42,         # reproducibility\n",
+    "    stratify=y               # keep class balance in both sets\n",
+    ")\n",
+    "\n",
+    "print(f\"Training set shape: {X_train.shape}\")\n",
+    "print(f\"Test set shape:     {X_test.shape}\")\n",
+    "\n",
+    "# Quick check of class proportions\n",
+    "train_ratio = y_train.value_counts(normalize=True).sort_index().rename({0:\"class_0\",1:\"class_1\"})\n",
+    "test_ratio  = y_test.value_counts(normalize=True).sort_index().rename({0:\"class_0\",1:\"class_1\"})\n",
+    "\n",
+    "print(\"\\nClass proportions (train):\")\n",
+    "display(train_ratio.to_frame(\"ratio\"))\n",
+    "\n",
+    "print(\"Class proportions (test):\")\n",
+    "display(test_ratio.to_frame(\"ratio\"))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b21105ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n--- 1.7. Training Baseline Model (Logistic Regression) ---\")\n",
+    "\n",
+    "# We create a simple pipeline for the baseline:\n",
+    "# 1. StandardScaler: scales all features.\n",
+    "# 2. LogisticRegression: the model itself.\n",
+    "pipeline_lr = Pipeline([\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('model', LogisticRegression(random_state=42, max_iter=1000))\n",
+    "])\n",
+    "\n",
+    "# Train the baseline model\n",
+    "pipeline_lr.fit(X_train, y_train)\n",
+    "print(\"Baseline model trained successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "502b9be2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n--- 1.8. Evaluating Baseline Model ---\")\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred_lr = pipeline_lr.predict(X_test)\n",
+    "y_prob_lr = pipeline_lr.predict_proba(X_test)[:, 1]  # Probabilities for ROC-AUC\n",
+    "\n",
+    "# Compute metrics\n",
+    "accuracy_lr = accuracy_score(y_test, y_pred_lr)\n",
+    "auc_lr = roc_auc_score(y_test, y_prob_lr)\n",
+    "\n",
+    "print(f\"\\n--- Baseline Model (Logistic Regression) Performance ---\")\n",
+    "print(f\"Accuracy: {accuracy_lr:.4f}\")\n",
+    "print(f\"ROC-AUC Score: {auc_lr:.4f}\")\n",
+    "\n",
+    "# Classification report\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, y_pred_lr, target_names=['No HD (0)', 'HD (1)']))\n",
+    "\n",
+    "# Confusion matrix\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "cm = confusion_matrix(y_test, y_pred_lr)\n",
+    "\n",
+    "plt.figure(figsize=(5,4))\n",
+    "sns.heatmap(\n",
+    "    cm,\n",
+    "    annot=True,\n",
+    "    fmt='d',\n",
+    "    cmap='Blues',\n",
+    "    xticklabels=['Predicted No HD', 'Predicted HD'],\n",
+    "    yticklabels=['Actual No HD', 'Actual HD']\n",
+    ")\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('Actual')\n",
+    "plt.title('Baseline Confusion Matrix')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('step1_05_baseline_confusion_matrix.png', dpi=150)\n",
+    "plt.show()\n",
+    "\n",
+    "# ROC Curve\n",
+    "fpr, tpr, _ = roc_curve(y_test, y_prob_lr)\n",
+    "plt.figure(figsize=(5,4))\n",
+    "plt.plot(fpr, tpr, label=f\"LogReg (AUC = {auc_lr:.3f})\")\n",
+    "plt.plot([0, 1], [0, 1], 'k--', label='Chance')\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('ROC Curve – Baseline Logistic Regression')\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('step1_06_baseline_roc_curve.png', dpi=150)\n",
+    "plt.show()"
    ]
   }
  ],
