--- a/Projet_ML_AVC.ipynb
+++ b/Projet_ML_AVC.ipynb
@@ -2755,7 +2755,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2769,7 +2769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
